--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "express": "^4.14.0",
+    "loadash": "0.0.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.0",
