--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "bootstrap": "^3.3.7",
+    "circular-json": "^0.3.1",
     "express": "^4.14.0",
     "loadash": "0.0.1",
     "react": "^15.4.1",
