--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.13.2"
