--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.12.0",
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "circular-json": "^0.3.1",
+    "classnames": "^2.2.5",
     "express": "^4.14.0",
     "loadash": "0.0.1",
     "react": "^15.4.1",
@@ -28,6 +30,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "validator": "^6.2.0",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.13.2"
