--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
     "circular-json": "^0.3.1",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
+    "knex": "^0.12.6",
     "loadash": "0.0.1",
+    "pg": "^6.1.2",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
