--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bcrypt": "^1.0.1",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
