--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "circular-json": "^0.3.1",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
     "loadash": "0.0.1",
     "pg": "^6.1.2",
