--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project4",
+  "name": "reddice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,36 +10,37 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "nodemon": "^1.9.2",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
+  },
   "dependencies": {
-    "axios": "^0.13.1",
-    "babel-cli": "^6.18.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "bcrypt": "^1.0.1",
-    "bluebird": "^3.4.6",
+    "axios": "0.13.1",
+    "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
-    "bookshelf": "^0.10.2",
-    "bootstrap": "^3.3.7",
-    "circular-json": "^0.3.1",
+    "bookshelf": "^0.10.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.2.1",
-    "knex": "^0.12.6",
-    "loadash": "0.0.1",
-    "pg": "^6.1.2",
-    "react": "^15.4.1",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.1",
-    "react-hot-loader": "^1.3.1",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
+    "jsonwebtoken": "^7.1.7",
+    "jwt-decode": "^2.1.0",
+    "knex": "^0.11.7",
+    "lodash": "^4.13.1",
+    "pg": "^6.0.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.0",
+    "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "shortid": "^2.2.6",
-    "validator": "^6.2.0",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.13.2"
+    "validator": "^5.4.0"
   }
 }
